--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,9 @@
-.App {
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +40,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
